--- a/tictactoe.html
+++ b/tictactoe.html
@@ -14,77 +14,77 @@ height:100px;
 #oo {
     position: absolute; 
     visibility: visible; 
-     left: 15px; 
-       top: 20px; 
+     left: 10px; 
+       top: 10px; 
        z-index: 20; 
 }#ol {
     position: absolute; 
     visibility: visible; 
-     left: 200px; 
-       top: 20px; 
+     left: 225px; 
+       top: 35px; 
        z-index: 20; 
 }
 #ot {
     position: absolute; 
     visibility: visible; 
-     left: 400px; 
-       top: 20px; 
+     left: 415px; 
+       top: 35px; 
        z-index: 20; 
 }
 #lo {
     position: absolute; 
     visibility: visible; 
-     left: 15px; 
-       top: 200px; 
+     left: 35px; 
+       top: 225px; 
        z-index: 20; 
 }#ll {
     position: absolute; 
     visibility: visible; 
-     left: 200px; 
-       top: 200px; 
+     left: 225px; 
+       top: 225px; 
        z-index: 20; 
 }
 #lt {
     position: absolute; 
     visibility: visible; 
-     left: 400px; 
-       top: 200px; 
+     left: 415px; 
+       top: 225px; 
        z-index: 20; 
 }
 #to {
     position: absolute; 
     visibility: visible; 
-     left: 15px; 
-       top: 400px; 
+     left: 35px; 
+       top: 420px; 
        z-index: 20; 
 }#tl {
     position: absolute; 
     visibility: visible; 
-     left: 200px; 
-       top: 400px; 
+     left: 225px; 
+       top: 420px; 
        z-index: 20; 
 }
 #tt {
     position: absolute; 
     visibility: visible; 
-     left: 400px; 
-       top: 400px; 
+     left: 415px; 
+       top: 420px; 
        z-index: 20; 
 }
 </style>
 </head>
 <body id="grid">
-<button  onclick="func(0,0,'oo')"><img src="test.png" id="oo" style="width:150px;height:150px;"></button>
-<button onclick="func(0,1,'ol')"><img src="test.png" id="ol"  style="width:150px;height:150px;"></button>
-<button onclick="func(0,2,'ot')"><img src="test.png" id="ot"  style="width:150px;height:150px;"></button>
+<button  onclick="func(0,0,'oo')"><img src="test.jpg" id="oo" style="width:180px;height:180px;"></button>
+<button onclick="func(0,1,'ol')"><img src="test.jpg" id="ol"  style="width:150px;height:150px;"></button>
+<button onclick="func(0,2,'ot')"><img src="test.jpg" id="ot"  style="width:150px;height:150px;"></button>
 
-<button  onclick="func(1,0,'lo')"><img src="test.png" id="lo" style="width:150px;height:150px;"></button>
-<button onclick="func(1,1,'ll')"><img src="test.png" id="ll"  style="width:150px;height:150px;"></button>
-<button onclick="func(1,2,'lt')"><img src="test.png" id="lt"  style="width:150px;height:150px;"></button>
+<button  onclick="func(1,0,'lo')"><img src="test.jpg" id="lo" style="width:150px;height:150px;"></button>
+<button onclick="func(1,1,'ll')"><img src="test.jpg" id="ll"  style="width:150px;height:150px;"></button>
+<button onclick="func(1,2,'lt')"><img src="test.jpg" id="lt"  style="width:150px;height:150px;"></button>
 
-<button  onclick="func(2,0,'to')"><img src="test.png" id="to" style="width:150px;height:150px;"></button>
-<button onclick="func(2,1,'tl')"><img src="test.png" id="tl"  style="width:150px;height:150px;"></button>
-<button onclick="func(2,2,'tt')"><img src="test.png" id="tt"  style="width:150px;height:150px;"></button>
+<button  onclick="func(2,0,'to')"><img src="test.jpg" id="to" style="width:150px;height:150px;"></button>
+<button onclick="func(2,1,'tl')"><img src="test.jpg" id="tl"  style="width:150px;height:150px;"></button>
+<button onclick="func(2,2,'tt')"><img src="test.jpg" id="tt"  style="width:150px;height:150px;"></button>
 
 
 
@@ -99,11 +99,37 @@ function func(n1,n2,id) {
   count=count+1;
   if(count%2==0)
   { ar[n1][n2]=0;
-     document.getElementById(id).src="o.png"; }
+     document.getElementById(id).src="o.png";
+     check_winner(0); }
 else
   { ar[n1][n2]=1;
-
- document.getElementById(id).src="x.png"; }
+ document.getElementById(id).src="x.png"; 
+  check_winner(1); }
+function check_winner(n)
+{  var win=0;
+   if( ar[0][0]==1 && ar[0][1]==1 && ar[0][2]==1)
+     win=1;
+    if( ar[1][0]==n && ar[1][1]==n && ar[1][2]==n)
+     win=1;
+ if( ar[2][0]==n && ar[2][1]==n && ar[2][2]==n)
+     win=1;
+ if( ar[0][0]==n && ar[1][0]==n && ar[2][0]==n)
+     win=1;
+ if( ar[0][1]==n && ar[1][1]==n && ar[2][1]==n)
+     win=1;
+ if( ar[0][2]==n && ar[1][2]==n && ar[2][2]==n)
+     win=1;
+ if( ar[0][0]==n && ar[1][1]==n && ar[2][2]==n)
+     win=1;
+ if( ar[0][2]==n && ar[1][1]==n && ar[2][0]==n)
+     win=1;
+if(win == 1)
+{ if (n==1)
+   alert("X wins");
+ else 
+  alert ("O wins");
+  location.reload();}
+}
       
 }
 </script>
