--- a/tictactoe.html
+++ b/tictactoe.html
@@ -99,11 +99,11 @@ function func(n1,n2,id) {
   count=count+1;
   if(count%2==0)
   { ar[n1][n2]=0;
-     document.getElementById(id).src="o.png";
+     document.getElementById(id).src="o.jpeg";
      check_winner(0); }
 else
   { ar[n1][n2]=1;
- document.getElementById(id).src="x.png"; 
+ document.getElementById(id).src="x.jpeg"; 
   check_winner(1); }
 function check_winner(n)
 {  var win=0;
