--- a/tictactoe.html
+++ b/tictactoe.html
@@ -140,8 +140,8 @@ for( var i=0;i<3;i=i+1)
    }
 }
 if(r!=1)
-alert("Tie--Noone wins");
-      
+{alert("Tie--Noone wins");
+ location.reload();}     
 }
 </script>
 
