--- a/tictactoe.html
+++ b/tictactoe.html
@@ -131,8 +131,9 @@ if(win == 1)
  else 
   alert ("O wins");
   location.reload();}
-}
- 
+
+else
+{
 var r;
 for( var i=0;i<3;i=i+1)
  { for( var j =0;j<3;j=j+1)
@@ -144,6 +145,8 @@ for( var i=0;i<3;i=i+1)
 if(r!=1)
 {alert("Tie--Noone wins");
  location.reload();}     
+}
+}
 }
 </script>
 
